# Numerical-Methods

./: .gitignore  CMakeLists.txt  README.md  Readme.md  main.cpp
Libraries/eigen/bench/: eig33.cpp
Libraries/eigen/doc/: QuickStartGuide.dox  TutorialMatrixClass.dox
Libraries/eigen/doc/examples/: QuickStart_example2_fixed.cpp  tut_arithmetic_add_sub.cpp  tut_arithmetic_dot_cross.cpp  tut_arithmetic_scalar_mul_div.cpp
Libraries/eigen/doc/snippets/: HessenbergDecomposition_packedMatrix.cpp  HouseholderSequence_HouseholderSequence.cpp  MatrixBase_array.cpp  MatrixBase_array_const.cpp  MatrixBase_col.cpp  MatrixBase_cwiseMax.cpp  MatrixBase_cwiseMin.cpp  MatrixBase_cwiseQuotient.cpp  MatrixBase_cwiseSqrt.cpp  (+5 more)
Libraries/eigen/test/: array_for_matrix.cpp  array_replicate.cpp  commainitializer.cpp  linearstructure.cpp  mapped_matrix.cpp  nullary.cpp  unalignedassert.cpp
Linear_Solvers/: CMakeLists.txt  equations_solvers.cpp  equations_solvers.h  equations_solvers.hpp
Math_Libraries/: Matrix3D.h  Vector3D.h  Vector4D.h
Systems of Linear Equations/: Readme.md
Systems of Linear Equations/Cholesky Factorization/: Cholesky Factorization Theory and Examples.ipynb  Readme.md  cholesky.py
Systems of Linear Equations/Conjugate Gradient/: Conjugate Gradient .ipynb  Readme.md  conjugate_gradient.py
Systems of Linear Equations/Gaussian Elimination/: Gaussian_Elimination.md  LU Factorization - Theory + Examples.ipynb  Readme.md  backward_forward_substitution.m  backward_forward_substitution.py  lu_factorization.m  lu_factorization.py  plu_factorization.py
src/: main.cpp
(+4 files in other folders)
